アプリ名修正

--- a/reading_recorder/android/privacy_policy.html
+++ b/reading_recorder/android/privacy_policy.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                   built the 英語多読管理簿 app as
+                   built the 英語多読記録簿 app as
                   a Free app. This SERVICE is provided by
                    at no cost and is intended for use as
                   is.
